# scrapyard

./: .gitignore
advent_of_code/: .gitignore  Cargo.toml  README.md
advent_of_code/2015/: .gitignore  Cargo.toml  README.md
advent_of_code/2015/bench/: my_benchmark.rs
advent_of_code/2015/day_01/: Cargo.toml
advent_of_code/2015/inputs/: day05_sample.txt  day20.txt  day25_sample.txt
advent_of_code/2015/solutions/: Cargo.toml
advent_of_code/2015/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs  main.rs  utils.rs
advent_of_code/2015/wasm/: README.MD
advent_of_code/2015/www/: package-lock.json
advent_of_code/2016/: .gitignore  Cargo.toml
advent_of_code/2016/inputs/: day07_sample.txt  day11_sample.txt  day17.txt  day19.txt  day22.txt  day23.txt
advent_of_code/2016/solutions/: Cargo.toml  README.md
advent_of_code/2016/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_11_lifetimes.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs  main.rs  utils.rs
advent_of_code/2016/wasm/: Cargo.toml
advent_of_code/2017/solutions/: Cargo.toml  README.md
advent_of_code/2017/wasm/: Cargo.toml  README.MD
advent_of_code/2018/solutions/: Cargo.toml  README.md
advent_of_code/2018/wasm/: Cargo.toml  README.MD
advent_of_code/2019/solutions/: Cargo.toml  README.md
advent_of_code/2019/wasm/: Cargo.toml  README.MD
advent_of_code/2020/day_01/: input.txt
advent_of_code/2020/day_02/: Cargo.toml
advent_of_code/2020/day_03/: Cargo.toml
advent_of_code/2020/day_04/: Cargo.toml
advent_of_code/2020/day_05/: Cargo.toml  input.txt
advent_of_code/2020/day_06/: Cargo.toml  input.txt
advent_of_code/2020/day_07/: Cargo.toml  input.txt
advent_of_code/2020/day_08/: Cargo.toml
advent_of_code/2020/day_09/: Cargo.toml  input.txt
advent_of_code/2020/day_1/: Cargo.toml
advent_of_code/2020/day_10/: Cargo.toml  input.txt
advent_of_code/2020/day_11/: Cargo.toml
advent_of_code/2020/day_12/: Cargo.toml
advent_of_code/2020/day_13/: Cargo.toml
advent_of_code/2020/day_14/: Cargo.toml  input.txt
advent_of_code/2020/day_15/: Cargo.toml
advent_of_code/2020/day_16/: Cargo.toml
advent_of_code/2020/day_17/: Cargo.toml  input.txt
advent_of_code/2020/day_18/: Cargo.toml  input.txt
advent_of_code/2020/day_19/: Cargo.toml  input.txt
advent_of_code/2020/day_20/: Cargo.toml  input.txt  rylandefm.py
advent_of_code/2020/day_21/: Cargo.toml  benDMeyers.js  input.txt
advent_of_code/2020/day_22/: Cargo.toml  input.txt
advent_of_code/2020/day_23/: Cargo.toml
advent_of_code/2020/day_24/: Cargo.toml  input.txt
advent_of_code/2020/day_25/: Cargo.toml  input.txt
advent_of_code/2020/solutions/: Cargo.toml  README.md  day19_reynaut.py
advent_of_code/2020/wasm/: Cargo.toml  README.MD
advent_of_code/2021/: .gitignore  Cargo.toml  README.md
advent_of_code/2021/bench/: my_benchmark.rs
advent_of_code/2021/day_01/: Cargo.toml  README.md
advent_of_code/2021/day_02/: Cargo.toml  README.md  input.txt
advent_of_code/2021/day_03/: Cargo.toml  input.txt
advent_of_code/2021/day_04/: input.txt
advent_of_code/2021/day_05/: Cargo.toml
advent_of_code/2021/day_06/: input.txt
advent_of_code/2021/day_11/: Cargo.toml  README.md
advent_of_code/2021/day_12/: Cargo.toml  README.md
advent_of_code/2021/day_13/: Cargo.toml  README.md
advent_of_code/2021/day_14/: Cargo.toml  README.md
advent_of_code/2021/day_15/: Cargo.toml
advent_of_code/2021/day_16/: Cargo.toml
advent_of_code/2021/day_17/: Cargo.toml  README.md
advent_of_code/2021/day_18/: Cargo.toml  README.md
advent_of_code/2021/day_19/: Cargo.toml  README.md
advent_of_code/2021/day_20/: Cargo.toml  README.md
advent_of_code/2021/day_21/: Cargo.toml
advent_of_code/2021/day_22/: Cargo.toml  README.md
advent_of_code/2021/day_23/: Cargo.toml
advent_of_code/2021/day_24/: Cargo.toml  README.md
advent_of_code/2021/day_25/: Cargo.toml  README.md
advent_of_code/2021/inputs/: day02.txt  day04_sample.txt  day06.txt  day10.txt  day19.txt  day25.txt
advent_of_code/2021/solutions/: Cargo.toml
advent_of_code/2021/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs  main.rs  utils.rs
advent_of_code/2021/wasm/: Cargo.toml  README.MD
advent_of_code/2021/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  worker.js
advent_of_code/2021_wasm/: Cargo.toml  README.md
advent_of_code/2021_wasm/bench/: my_benchmark.rs
advent_of_code/2021_wasm/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_10.rs  day_12.rs  day_13.rs  day_15.rs  day_16.rs  day_17.rs  day_19.rs  day_20.rs  day_22.rs  day_23.rs  day_24.rs  lib.rs  main.rs  utils.rs
advent_of_code/2021_wasm/www/: package-lock.json  package.json
advent_of_code/2022/: .gitignore  Cargo.toml  README.md
advent_of_code/2022/bench/: my_benchmark.rs
advent_of_code/2022/inputs/: day03.txt  day04.txt  day11.txt  day13.txt  day17.txt  day22.txt
advent_of_code/2022/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  main.rs  utils.rs
advent_of_code/2023/: .gitignore  Cargo.toml  README.md  rustfmt.toml
advent_of_code/aoc/: Cargo.toml
book/: README.md
rust_wasm_book/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
(+688 files in other folders)
