[package]
authors = ["Nicky Meuleman <nicky.dev@outlook.com>"]
edition = "2021"
name = "aoc2015"
version = "0.0.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# https://rustwasm.github.io/wasm-pack/book/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html#a1-crate-type
# "cdylib" is necessary for wasm
# "rlib" because we want to be able to use "use" statements in non-wasm spots like main.rs and bench/
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = "0.3"

[profile.release]
# Tell `LLVM` to optimize a certain way
# for example, the optimization flag possibilities:
# 's' size
# 'z' aggressive size
# 1   speed
# 2   more speed
# 3   even more speed (release profile default)
opt-level = 'z'
# use link time optimization, slower builds, but faster and smaller
lto = true
# abort on panic instead of unwinding the stack, smaller binaries, faster
# https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html
panic = 'abort'

[profile.dev]
# https://github.com/rust-lang/cargo/issues/2726
# this needs to be set or cargo bench refuses to work, no idea why
panic = 'abort'

[package.metadata.wasm-pack.profile.release]
# run wasm-opt with a flag.
# for example, the optimization flag possibilities:
# -Os   size
# -Oz   aggressive size
# -O    speed
# -O4   aggressive speed
# after running both, speed output a .wasm with the exact same size as size, so I chose speed
# so, if I set the LLVM opt-level to speed, it fails to build and tells me to disable wasm-opt, if I set it to size, it works
wasm-opt = ['-Oz']

[[bench]]
harness = false
name = 'my_benchmark'
path = 'bench/my_benchmark.rs'
