[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Nicky Meuleman <nicky.dev@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# The "fix" to an error is to disable optimization, sucks, but at least it lets me follow along further than "hello-world"
# https://github.com/rustwasm/wasm-pack/issues/864#issuecomment-647850921
# After reinstalling wasm-pack this is no longer a problem? I don't know, WSL was missing some necessary plumbing I guess
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false