[package]
name = "aoc2020"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solutions to Advent of Code 2020"
keywords = ["AoC", "advent-of-code", "2020"]
categories = ["algorithms", "rust-patterns", "command-line-utilities"]
readme = "README.md"
repository.workspace = true

[dependencies]
aoc-core = { path = "../../core/solutions"}
itertools = "0.11.0"
regex = "1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
# to disable the libtest benchmark harness
harness = false