[package]
name = "day_22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "bench/my_benchmark.rs"
harness = false