[package]
name = "day_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
hashbrown = "0.11"
anyhow = {version="1.0.51", features=["backtrace"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "bench/my_benchmark.rs"
harness = false