[package]
name = "aoc2023-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
categories = ["algorithms", "rust-patterns", "command-line-utilities"]

[dependencies]
itertools = "0.11.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
# to disable the libtest benchmark harness
harness = false